fix gap issue

--- a/packages/radix-ui-themes/src/components/data-list.css
+++ b/packages/radix-ui-themes/src/components/data-list.css
@@ -126,6 +126,7 @@
     /** Use subgrid so all the label columns remain aligned **/
     grid-template-columns: subgrid;
     padding: 0;
+    gap: inherit;
   }
 }
 
